Changelog
=========

3.4 (unreleased)
----------------

- Remove `public_trial` from repository byline.
  [lgraf]

- Journalize any changes to `public_trial` field.
  [lgraf]

- Journal: Listen on IBaseDocument instead of IDocumentSchema - mails are now also
  considered documentish and should be treated equally.
  [lgraf]

- Don't show public trial edit form for template dossiers.
  [lgraf]

- Reword German translations for public_trial_statement label and description:
  New label: Bearbeitungsinformation
  New description: Datum Gesuch, Datum Entscheid, Verweis auf GEVER-Zugangsgeschaeft
  [lgraf]

- Fix issue with `prevent_deletion` subscriber not being able to acquire membership_tool
  because of broken acquisition during Plone site deletion.
  [lgraf]

- Make default value adapter for `public_trial` use the configurable default
  value from IClassificationSettings registry record.

- Add an IClassificationSettings registry record.
  [lgraf]

- Allow public trial state to also be modified in closed dossier states.
  [mathias.leimgruber]

- File a copy of the mail in the dossier by default when sending documents from GEVER.
  [lgraf]

- Add overview tab for mail (Shows metadata).
  [mathias.leimgruber]

- Show classification infos on document overview tab.
  [mathias.leimgruber]

- Add classification behavior to mail.
  [mathias.leimgruber]

- Use document byline also on mail.
  [mathias.leimgruber]

- OGQuickUploadCapableFileFactory: Set default values before adding content to container.
  (Prevents values set by handlers on ObjectAddedEvent to be overwritten again).
  [lgraf]

- Implement document metadata behavor on mail (incl. Upgrade step and init event).
  [mathias.leimgruber]

- Refactored document overview.
  [lgraf]

- Monkey patch DexterityContent.__getattr__.
  This is required to support dynamic lookup of schema-level default values for
  fields in behaviors. It basically is a backport of this Dexterity 2.x fix: