@@ -42,6 +42,14 @@
         layer="opengever.base.interfaces.IOpengeverBaseLayer"
         />
 
+    <browser:page
+        name="view"
+        for="plone.dexterity.interfaces.IDexterityContent"
+        class=".default_view.OGDefaultView"
+        permission="zope2.View"
+        layer="opengever.base.interfaces.IOpengeverBaseLayer"
+        />
+
     <configure package="plone.app.search">
       <browser:page
           name="updated_search"
